# sparse-to-dense.pytorch

./: CMakeLists.txt  README.md  copy_relevant_scenenet.py  dense_to_sparse.py  environment.yml  main.py  metrics.py  models.py  nyu_dataloader.py  package.xml  scenenet_loader.py  utils.py
sparse_to_dense/: __init__.py  copy_relevant_scenenet.py  criteria.py  dense_to_sparse.py  main.py  metrics.py  models.py  nyu_dataloader.py  scenenet_loader.py  utils.py
