<?xml version="1.0"?>
<package format="2">
  <name>sparse_to_dense</name>
  <version>0.0.1</version>
  <description>The sparse_to_dense package</description>
  <maintainer email="mfehr@todo.todo">mfehr</maintainer>
  <license>Closed</license>


  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

</package>
